llvm/src/snapshots/transmute_llvm__tests__fibo_iter_unoptimized.snap
---
source: llvm/src/lib.rs
expression: unoptimized
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

define i64 @f(i64 %"n#sym19#") {
entry:
  %"current#local#sym22#" = alloca i64, align 8
  %"prev#local#sym21#" = alloca i64, align 8
  %"prev_prev#local#sym20#" = alloca i64, align 8
  %"n#local#sym19#" = alloca i64, align 8
  store i64 %"n#sym19#", ptr %"n#local#sym19#", align 4
  %"n#local#sym19#1" = load i64, ptr %"n#local#sym19#", align 4
  %"eq#" = icmp eq i64 %"n#local#sym19#1", 0
  br i1 %"eq#", label %true_branch, label %end_if

true_branch:                                      ; preds = %entry
  ret i64 0

end_if:                                           ; preds = %entry
  %"n#local#sym19#4" = load i64, ptr %"n#local#sym19#", align 4
  %"eq#5" = icmp eq i64 %"n#local#sym19#4", 1
  br i1 %"eq#5", label %true_branch2, label %end_if3

true_branch2:                                     ; preds = %end_if
  ret i64 1

end_if3:                                          ; preds = %end_if
  store i64 0, ptr %"prev_prev#local#sym20#", align 4
  store i64 1, ptr %"prev#local#sym21#", align 4
  store i64 0, ptr %"current#local#sym22#", align 4
  br label %cond

cond:                                             ; preds = %body, %end_if3
  %"n#local#sym19#6" = load i64, ptr %"n#local#sym19#", align 4
  %"gt#" = icmp sgt i64 %"n#local#sym19#6", 1
  br i1 %"gt#", label %body, label %end_while

body:                                             ; preds = %cond
  %"prev_prev#local#sym20#7" = load i64, ptr %"prev_prev#local#sym20#", align 4
  %"prev#local#sym21#8" = load i64, ptr %"prev#local#sym21#", align 4
  %"add#" = add i64 %"prev_prev#local#sym20#7", %"prev#local#sym21#8"
  store i64 %"add#", ptr %"current#local#sym22#", align 4
  %"prev#local#sym21#9" = load i64, ptr %"prev#local#sym21#", align 4
  store i64 %"prev#local#sym21#9", ptr %"prev_prev#local#sym20#", align 4
  %"current#local#sym22#10" = load i64, ptr %"current#local#sym22#", align 4
  store i64 %"current#local#sym22#10", ptr %"prev#local#sym21#", align 4
  %"n#local#sym19#11" = load i64, ptr %"n#local#sym19#", align 4
  %"sub#" = sub i64 %"n#local#sym19#11", 1
  store i64 %"sub#", ptr %"n#local#sym19#", align 4
  br label %cond

end_while:                                        ; preds = %cond
  %"current#local#sym22#12" = load i64, ptr %"current#local#sym22#", align 4
  ret i64 %"current#local#sym22#12"
}
