llvm/src/snapshots/transmute_llvm__tests__if_simple_unoptimized.snap
---
source: llvm/src/lib.rs
expression: unoptimized
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

define void @f() {
entry:
  br i1 true, label %true_branch, label %false_branch

true_branch:                                      ; preds = %entry
  br label %end_if

false_branch:                                     ; preds = %entry
  br label %end_if

end_if:                                           ; preds = %false_branch, %true_branch
  ret void
}
