llvm/src/snapshots/transmute_llvm__tests__if_then_else_value_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @_TM0_5print1Pn(i64)

declare void @_TM0_5print1Pb(i1)

define private void @_glob() {
entry:
  unreachable
}

define i1 @_TM0_1f2Pnb(i64 %"n#param#sym20#", i1 %"c#param#sym21#") gc "shadow-stack" {
entry:
  %"m#local#sym22#" = alloca i64, align 8
  br i1 %"c#param#sym21#", label %true_branch, label %false_branch

true_branch:                                      ; preds = %entry
  %"sub#" = sub i64 %"n#param#sym20#", 1
  br label %end_if

false_branch:                                     ; preds = %entry
  %"add#" = add i64 %"n#param#sym20#", 1
  br label %end_if

end_if:                                           ; preds = %false_branch, %true_branch
  %if_result = phi i64 [ %"sub#", %true_branch ], [ %"add#", %false_branch ]
  store i64 %if_result, ptr %"m#local#sym22#", align 4
  call void @gc_run()
  %"m#local#sym22#1" = load i64, ptr %"m#local#sym22#", align 4
  %"eq#" = icmp eq i64 %"m#local#sym22#1", 42
  ret i1 %"eq#"
}

attributes #0 = { nounwind }
