llvm/src/snapshots/transmute_llvm__tests__let_produces_alloca_at_entry_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

declare void @_TM0_5print1s(ptr)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f1n(i64 %"n#param#sym22#") gc "shadow-stack" {
entry:
  %"m#local#sym24#" = alloca i64, align 8
  %"m#local#sym23#" = alloca i64, align 8
  %"eq#" = icmp eq i64 %"n#param#sym22#", 42
  br i1 %"eq#", label %true_branch, label %false_branch

true_branch:                                      ; preds = %entry
  store i64 0, ptr %"m#local#sym23#", align 4
  call void @gc_run()
  %"m#local#sym23#1" = load i64, ptr %"m#local#sym23#", align 4
  %"add#" = add i64 %"m#local#sym23#1", 1
  ret i64 %"add#"

false_branch:                                     ; preds = %entry
  store i64 0, ptr %"m#local#sym24#", align 4
  call void @gc_run()
  %"m#local#sym24#2" = load i64, ptr %"m#local#sym24#", align 4
  %"sub#" = sub i64 %"m#local#sym24#2", 1
  ret i64 %"sub#"

end_if:                                           ; No predecessors!
  unreachable
}

attributes #0 = { nounwind }
