llvm/src/snapshots/transmute_llvm__tests__ne_boolean_boolean_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @_TM0_5print1Pn(i64)

declare void @_TM0_5print1Pb(i1)

define private void @_glob() {
entry:
  unreachable
}

define i1 @_TM0_1f2Pbb(i1 %"l#param#sym20#", i1 %"r#param#sym21#") gc "shadow-stack" {
entry:
  %"ne#" = icmp ne i1 %"l#param#sym20#", %"r#param#sym21#"
  ret i1 %"ne#"
}

attributes #0 = { nounwind }
