llvm/src/snapshots/transmute_llvm__tests__nested_array_instantiation_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@layout_a2n = global [3 x i64] [i64 1, i64 2, i64 0]
@layout_a2a2n = global [3 x i64] [i64 1, i64 2, i64 ptrtoint (ptr @layout_a2n to i64)]

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f0() gc "shadow-stack" {
entry:
  %"gcroot#heap#array#2" = alloca ptr, align 8
  store ptr null, ptr %"gcroot#heap#array#2", align 8
  call void @llvm.gcroot(ptr nonnull %"gcroot#heap#array#2", ptr nonnull @layout_a2n)
  %"gcroot#heap#array#" = alloca ptr, align 8
  store ptr null, ptr %"gcroot#heap#array#", align 8
  call void @llvm.gcroot(ptr nonnull %"gcroot#heap#array#", ptr nonnull @layout_a2n)
  %"a#local#sym20#" = alloca ptr, align 8
  store ptr null, ptr %"a#local#sym20#", align 8
  call void @llvm.gcroot(ptr nonnull %"a#local#sym20#", ptr nonnull @layout_a2a2n)
  %"heap#array#" = call ptr @gc_malloc(i64 16)
  store ptr %"heap#array#", ptr %"gcroot#heap#array#", align 8
  store i64 0, ptr %"heap#array#", align 4
  %"heap#array#.repack18" = getelementptr inbounds [2 x i64], ptr %"heap#array#", i64 0, i64 1
  store i64 1, ptr %"heap#array#.repack18", align 4
  %"heap#array#3" = call ptr @gc_malloc(i64 16)
  store ptr %"heap#array#3", ptr %"gcroot#heap#array#2", align 8
  store i64 3, ptr %"heap#array#3", align 4
  %"heap#array#3.repack22" = getelementptr inbounds [2 x i64], ptr %"heap#array#3", i64 0, i64 1
  store i64 4, ptr %"heap#array#3.repack22", align 4
  %"heap#array#7" = call ptr @gc_malloc(i64 16)
  store ptr %"heap#array#", ptr %"heap#array#7", align 8
  %"heap#array#7.repack26" = getelementptr inbounds [2 x ptr], ptr %"heap#array#7", i64 0, i64 1
  store ptr %"heap#array#3", ptr %"heap#array#7.repack26", align 8
  store ptr %"heap#array#7", ptr %"a#local#sym20#", align 8
  call void @gc_run()
  %"a#local#sym20#11" = load ptr, ptr %"a#local#sym20#", align 8
  call void @tmc_check_array_index(i64 0, i64 2, i64 4, i64 15)
  %"array[?]#12" = load ptr, ptr %"a#local#sym20#11", align 8
  call void @tmc_check_array_index(i64 0, i64 2, i64 4, i64 18)
  %"array[?]#14" = load i64, ptr %"array[?]#12", align 4
  ret i64 %"array[?]#14"
}

attributes #0 = { nounwind }
