llvm/src/snapshots/transmute_llvm__tests__nested_struct_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define void @_TM0_1f1n(i64 %"n#param#sym21#") gc "shadow-stack" {
entry:
  ret void
}

define void @_TM0_N1f1n1g1sN1f1n8MyStruct(ptr %"p#param#sym23#") gc "shadow-stack" {
entry:
  ret void
}

attributes #0 = { nounwind }
